// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard basic 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="ImageCard__ContentWrapper-sc-1p2j9dm-0 jJnAwR"
          >
            <div
              onBlur={[Function]}
              onMouseOut={[Function]}
              style={
                Object {
                  "background": "#eee",
                  "height": "100%",
                  "overflow": "hidden",
                  "position": "relative",
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <img
                alt="Sample image"
                onLoad={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                onMouseUp={[Function]}
                src="landscape.jpg"
                style={
                  Object {
                    "left": undefined,
                    "position": "relative",
                    "top": undefined,
                  }
                }
              />
              <div
                style={
                  Object {
                    "left": undefined,
                    "margin": "auto",
                    "pointerEvents": "none",
                    "position": "absolute",
                    "right": "auto",
                    "top": undefined,
                  }
                }
              >
                <div
                  className="Hotspot__StyledHotspot-nlpwmi-0 fvESgj"
                >
                  <div
                    aria-describedby={null}
                    aria-labelledby="hotspot-35-65"
                    className="bx--tooltip__label"
                    id="hotspot-35-65"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-label=""
                      fill="purple"
                      fillRule="evenodd"
                      height="25"
                      role="img"
                      title=""
                      viewBox="0 0 14 16"
                      width="25"
                    >
                      <title>
                        
                      </title>
                      <path
                        d="M8 11.953l3.905-4.09 1.453 1.374L7 16 .635 9.238l1.452-1.376L6 11.954V0h2v11.953z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "bottom": 10,
                    "pointerEvents": "auto",
                    "position": "absolute",
                    "right": 10,
                  }
                }
              >
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom in"
                  type="button"
                >
                  +
                </button>
                <br />
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom out"
                  type="button"
                >
                  -
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard custom renderIconByName 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="ImageCard__ContentWrapper-sc-1p2j9dm-0 jJnAwR"
          >
            <div
              onBlur={[Function]}
              onMouseOut={[Function]}
              style={
                Object {
                  "background": "#eee",
                  "height": "100%",
                  "overflow": "hidden",
                  "position": "relative",
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <img
                alt="Sample image"
                onLoad={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                onMouseUp={[Function]}
                src="landscape.jpg"
                style={
                  Object {
                    "left": undefined,
                    "position": "relative",
                    "top": undefined,
                  }
                }
              />
              <div
                style={
                  Object {
                    "left": undefined,
                    "margin": "auto",
                    "pointerEvents": "none",
                    "position": "absolute",
                    "right": "auto",
                    "top": undefined,
                  }
                }
              >
                <div
                  className="Hotspot__StyledHotspot-nlpwmi-0 fvESgj"
                >
                  <div
                    aria-describedby={null}
                    aria-labelledby="hotspot-35-65"
                    className="bx--tooltip__label"
                    id="hotspot-35-65"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      fill="purple"
                      focusable="false"
                      height={25}
                      preserveAspectRatio="xMidYMid meet"
                      title=""
                      viewBox="0 0 32 32"
                      width={25}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16,10a6,6,0,0,0-6,6v8a6,6,0,0,0,12,0V16A6,6,0,0,0,16,10Zm-4.25,7.87h8.5v4.25h-8.5ZM16,28.25A4.27,4.27,0,0,1,11.75,24v-.13h8.5V24A4.27,4.27,0,0,1,16,28.25Zm4.25-12.13h-8.5V16a4.25,4.25,0,0,1,8.5,0Z"
                      />
                      <path
                        d="M30.66,19.21,24,13v9.1a4,4,0,0,0,8,0A3.83,3.83,0,0,0,30.66,19.21ZM28,24.35a2.25,2.25,0,0,1-2.25-2.25V17l3.72,3.47h0A2.05,2.05,0,0,1,30.2,22,2.25,2.25,0,0,1,28,24.35Z"
                      />
                      <path
                        d="M0,22.1a4,4,0,0,0,8,0V13L1.34,19.21A3.88,3.88,0,0,0,0,22.1Zm2.48-1.56h0L6.25,17v5.1a2.25,2.25,0,0,1-4.5,0A2.05,2.05,0,0,1,2.48,20.54Z"
                      />
                      <path
                        d="M15,5.5A3.5,3.5,0,1,0,11.5,9,3.5,3.5,0,0,0,15,5.5Zm-5.25,0A1.75,1.75,0,1,1,11.5,7.25,1.77,1.77,0,0,1,9.75,5.5Z"
                      />
                      <path
                        d="M20.5,2A3.5,3.5,0,1,0,24,5.5,3.5,3.5,0,0,0,20.5,2Zm0,5.25A1.75,1.75,0,1,1,22.25,5.5,1.77,1.77,0,0,1,20.5,7.25Z"
                      />
                      <title>
                        
                      </title>
                    </svg>
                  </div>
                </div>
                <div
                  className="Hotspot__StyledHotspot-nlpwmi-0 kwumIH"
                >
                  <div
                    aria-describedby={null}
                    aria-labelledby="hotspot-45-25"
                    className="bx--tooltip__label"
                    id="hotspot-45-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      height={25}
                      width={25}
                    >
                      <circle
                        cx={12.5}
                        cy={12.5}
                        fill="none"
                        opacity="1"
                        r={11.5}
                        stroke="white"
                        strokeWidth="2"
                      />
                      <circle
                        cx={12.5}
                        cy={12.5}
                        fill="#0f0"
                        opacity="0.7"
                        r={11.5}
                        stroke="none"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  className="Hotspot__StyledHotspot-nlpwmi-0 eqtfro"
                >
                  <div
                    aria-describedby={null}
                    aria-labelledby="hotspot-45-50"
                    className="bx--tooltip__label"
                    id="hotspot-45-50"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      height={25}
                      width={25}
                    >
                      <circle
                        cx={12.5}
                        cy={12.5}
                        fill="none"
                        opacity="1"
                        r={11.5}
                        stroke="white"
                        strokeWidth="2"
                      />
                      <circle
                        cx={12.5}
                        cy={12.5}
                        fill="#00f"
                        opacity="0.7"
                        r={11.5}
                        stroke="none"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  className="Hotspot__StyledHotspot-nlpwmi-0 ezcTmr"
                >
                  <div
                    aria-describedby={null}
                    aria-labelledby="hotspot-45-75"
                    className="bx--tooltip__label"
                    id="hotspot-45-75"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <svg
                      aria-hidden={true}
                      fill="blue"
                      focusable="false"
                      height={25}
                      preserveAspectRatio="xMidYMid meet"
                      title=""
                      viewBox="0 0 32 32"
                      width={25}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polygon
                        points="12,21.2 4.9,14.1 3.5,15.5 10.6,22.6 12,24 26.1,9.9 24.7,8.4"
                      />
                      <title>
                        
                      </title>
                    </svg>
                  </div>
                </div>
              </div>
              <div
                style={
                  Object {
                    "bottom": 10,
                    "pointerEvents": "auto",
                    "position": "absolute",
                    "right": 10,
                  }
                }
              >
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom in"
                  type="button"
                >
                  +
                </button>
                <br />
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom out"
                  type="button"
                >
                  -
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard error 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="iot--card--empty-message-wrapper"
            style={
              Object {
                "--card-content-padding": "16px",
              }
            }
          >
            Error loading data for this card:  API threw Nullpointer
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard error loading image 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="iot--card--empty-message-wrapper"
            style={
              Object {
                "--card-content-padding": "16px",
              }
            }
          >
            Error loading data for this card:  Error no image found called ImageID
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard hotspots are loading 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="ImageCard__ContentWrapper-sc-1p2j9dm-0 jJnAwR"
          >
            <div
              onBlur={[Function]}
              onMouseOut={[Function]}
              style={
                Object {
                  "background": "#eee",
                  "height": "100%",
                  "overflow": "hidden",
                  "position": "relative",
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <img
                alt="Sample image"
                onLoad={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                onMouseUp={[Function]}
                src="landscape.jpg"
                style={
                  Object {
                    "left": undefined,
                    "position": "relative",
                    "top": undefined,
                  }
                }
              />
              <div
                aria-live="assertive"
                className="bx--inline-loading"
                style={
                  Object {
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  className="bx--inline-loading__animation"
                >
                  <div
                    aria-atomic="true"
                    aria-labelledby="loading-id-5"
                    aria-live="assertive"
                    className="bx--loading bx--loading--small"
                  >
                    <label
                      className="bx--visually-hidden"
                      id="loading-id-5"
                    >
                      Active loading indicator
                    </label>
                    <svg
                      className="bx--loading__svg"
                      viewBox="-75 -75 150 150"
                    >
                      <title>
                        Active loading indicator
                      </title>
                      <circle
                        className="bx--loading__background"
                        cx="0"
                        cy="0"
                        r="26.8125"
                      />
                      <circle
                        className="bx--loading__stroke"
                        cx="0"
                        cy="0"
                        r="26.8125"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  className="bx--inline-loading__text"
                >
                  Loading hotspot data...
                </div>
              </div>
              <div
                style={
                  Object {
                    "bottom": 10,
                    "pointerEvents": "auto",
                    "position": "absolute",
                    "right": 10,
                  }
                }
              >
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom in"
                  type="button"
                >
                  +
                </button>
                <br />
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "background": "#fff",
                      "border": "none",
                      "boxShadow": "0px 0px 2px 0px rgba(0,0,0,0.5)",
                      "height": "25px",
                      "width": "25px",
                    }
                  }
                  title="Zoom out"
                  type="button"
                >
                  -
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/ImageCard isEditable 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "1056px",
        }
      }
    >
      <div
        className="iot--card iot--card--wrapper"
        data-testid="Card"
        id="image-hotspots"
        role="presentation"
        style={
          Object {
            "--card-default-height": "624px",
          }
        }
      >
        <div
          className="iot--card--header"
        >
          <span
            className="iot--card--title"
            title="Image"
          >
            <div
              className="iot--card--title--text"
            >
              Image
            </div>
          </span>
          <div
            className="iot--card--toolbar"
          >
            <button
              className="iot--card--toolbar-action iot--card--toolbar-svg-wrapper"
              onClick={[Function]}
              type="button"
            >
              <svg
                description="Expand to fullscreen"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                title="Expand to fullscreen"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M28,4H10A2.0059,2.0059,0,0,0,8,6V20a2.0059,2.0059,0,0,0,2,2H28a2.0059,2.0059,0,0,0,2-2V6A2.0059,2.0059,0,0,0,28,4Zm0,16H10V6H28Z"
                />
                <path
                  d="M18,26H4V16H6V14H4a2.0059,2.0059,0,0,0-2,2V26a2.0059,2.0059,0,0,0,2,2H18a2.0059,2.0059,0,0,0,2-2V24H18Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="iot--card--content"
          style={
            Object {
              "--card-content-height": "576px",
            }
          }
        >
          <div
            className="ImageCard__ContentWrapper-sc-1p2j9dm-0 jJnAwR"
          >
            <div
              className="ImageCard__EmptyDiv-sc-1p2j9dm-1 dkLZTG"
            >
              <svg
                aria-hidden={true}
                fill="gray"
                focusable="false"
                height={250}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={250}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19,14a3,3,0,1,0-3-3A3,3,0,0,0,19,14Zm0-4a1,1,0,1,1-1,1A1,1,0,0,1,19,10Z"
                />
                <path
                  d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4Zm0,22H6V20l5-5,5.59,5.59a2,2,0,0,0,2.82,0L21,19l5,5Zm0-4.83-3.59-3.59a2,2,0,0,0-2.82,0L18,19.17l-5.59-5.59a2,2,0,0,0-2.82,0L6,17.17V6H26Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
